src/objects/Media_Placement__c.object
<CustomObject>
    <fields>
        <fullName>Facebook_Description__c</fullName>
        <label>Facebook Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trailer_Title__c</fullName>
        <label>Trailer Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Youtube_Desc__c</fullName>
        <label>Youtube Desc</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Media Placement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Media Placement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Placements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>